--- a/package.json
+++ b/package.json
@@ -10,14 +10,7 @@
   "scripts": {
     "start": "node cluster.js",
     "dev": "cross-env NODE_PATH=. NODE_ENV=development nodemon",
-    "test": "npm run test:all",
-    "test:all": "npm run test:unit && npm run test:features",
-    "test:unit": "cross-env NODE_PATH=. NODE_ENV=test mocha --opts test/mocha.opts.unit",
-    "test:features": "cross-env NODE_PATH=. NODE_ENV=test mocha --opts test/mocha.opts.features",
-    "coverage": "cross-env NODE_PATH=. NODE_ENV=test nyc mocha --opts test/mocha.opts.unit",
-    "lint": "eslint {src,config,test}/**/*.js",
-    "console": "cross-env NODE_PATH=. node src/interfaces/console/index.js",
-    "postinstall": "cd src/core-libs && npm install"
+    "lint": "eslint {src,config}/**/*.js"
   },
   "repository": {
     "type": "git",
