--- a/package.json
+++ b/package.json
@@ -22,14 +22,12 @@
     "awilix": "^4.2.5",
     "awilix-express": "^3.0.0",
     "body-parser": "^1.19.0",
-    "chance": "^1.1.4",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.15.2",
     "http-status": "^1.4.2",
-    "inflection": "^1.12.0",
     "js-yaml": "^3.13.1",
     "method-override": "^3.0.0",
     "morgan": "^1.9.1",
@@ -42,21 +40,11 @@
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "chai-change": "^2.1.2",
-    "dirty-chai": "^2.0.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-import-resolver-node": "^0.3.3",
     "eslint-plugin-chai-friendly": "^0.5.0",
     "eslint-plugin-import": "^2.20.1",
-    "factory-girl": "^4.0.0",
-    "listr": "^0.11.0",
-    "mocha": "^8.1.3",
-    "nodemon": "^2.0.2",
-    "nyc": "^15.0.0",
-    "replace-in-file": "^5.0.2",
-    "supertest": "^3.4.2",
-    "supertest-as-promised": "^4.0.2"
+    "nodemon": "^2.0.2"
   }
 }
